fix: refactor html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html lang="en">
-<head>
-</head>
-<body>
-</body>
-<footer>
-</footer>
+    <head>
+        <title>Our Funky HTML Page</title>
+    </head>
+    <body>
+    </body>
+    <footer>
+    </footer>
 </html>
