refactor: change title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Our Funky HTML Page</title>
+        <title>My CV</title>
     </head>
     <body>
     </body>
