--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
     <head>
-        <title>My CV</title>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title></title>
+        <meta name="description" content="CV Aleksandr Hanevsky">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
+
+        
     </body>
-    <footer>
-    </footer>
 </html>
