--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!doctype html>
-<!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="CV Aleksandr Hanevsky">
+        <title>Aleksandr Hanevsky CV</title>
+        <meta name="description" content="Aleksandr Hanevsky CV">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
+        <header class="header">
 
-        
+        </header>
+        <main>
+            <section class="about"></section>
+            <section class="skills"></section>
+            <section class="code"></section>
+            <section class="education"></section>
+            <section class="english"></section>
+            <section class="contacts"></section>
+        </main>
     </body>
 </html>
