--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
-        <header class="header">
-
+        <header class="container">
+            <div class="header_photo">
+                <img src="./photos/photo_portconf19_011.jpg" alt="Aleksandr photo">
+            </div>
+            <div class="header_nav"></div>
         </header>
-        <main>
+        <main class="container">
             <section class="about"></section>
             <section class="skills"></section>
             <section class="code"></section>
+            <section class="expirience"></section>
             <section class="education"></section>
             <section class="english"></section>
             <section class="contacts"></section>
