feat: update css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,38 @@
             <div class="header_photo">
                 <img src="./photos/photo_portconf19_011.jpg" alt="Aleksandr photo">
             </div>
-            <div class="header_nav"></div>
+            <div class="header_nav">
+                <div class="header_nav">
+                    <nav >
+                        <ul class="header-menu">
+                            <li>
+                                <a href="#">About</a>
+                            </li>
+                            <li>
+                                <a href="#">Skills</a>
+                            </li>
+                            <li>
+                                <a href="#">Code example</a>
+                            </li>
+                            <li>
+                                <a href="#">Expirience</a>
+                            </li>
+                            <li>
+                                <a href="#">Education</a>
+                            </li>
+                            <li>
+                                <a href="#">English</a>
+                            </li>
+                            <li>
+                                <a href="#">Contacts</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="name">
+                    <h1>Aleksandr Hanevsky</h1>
+                </div>
+            </div>
         </header>
         <main class="container">
             <section class="about"></section>
