--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <img src="./photos/photo_portconf19_011.jpg" alt="Aleksandr photo">
             </div>
             <div class="header_nav">
-                <div class="header_nav">
+                <div class="nav">
                     <nav >
                         <ul class="header-menu">
                             <li>
@@ -47,9 +47,51 @@
             </div>
         </header>
         <main class="container">
-            <section class="about"></section>
-            <section class="skills"></section>
-            <section class="code"></section>
+            <section class="main">
+                    <h2 class="text-divider">About Me</h2>
+                    <div class="line-divider"></div>
+                    <div class="text-main">
+                        <p>I have more than 4 years of experience in Performance Quality Assurance. During this time I have had different projects in multiple industries such as E-commerce, CRM and CMS projects, online games, and banking systems. My working experience in performance testing helps provide recommendations on improving the performance of the application server-side. I have experience working in close collaboration with test automation, functional, development, and DevOps teams. I have strong technical skills and analytical abilities.</p>
+                    </div>
+            </section>
+            <section class="skills">
+                <h2 class="text-divider">Skills</h2>
+                <div class="line-divider"></div>
+                <div class="text-main">
+                    <ul>
+                        <li>
+                            <p>QA Skills</p>
+                            <ul>
+                                <li>
+                                    <p>Project Management and Issues Tracking Tools: JIRA (Atlassian), Confluence, MS Office, Trello, SharePoint</p>
+                                </li>
+                                <li>
+                                    <p>Testing Tools and utilities: JMeter, HP Loadrunner, Visual Studio, Azure Monitoring, Fiddler, VirtualBox, VPN clients (Cisco, OpenVPN), Putty, Oracle Enterprise Manager Cloud Control 13c</p>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <p>Technical Skills</p>
+                        </li>
+                        <li>
+                            <p>Web Development</p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <section class="code">
+                <pre>
+                    <code>
+                        <span class="code-text">function</span> <span class="code-dif">solution</span> (<span style="color: #de935f;">str</span>, ending){
+                            <span class="code-text">if</span> (ending.length > 0){
+                                return</span> ending === str.substr(0-ending.length);
+                            }<span class="code-text">else</span> {
+                                <span class="code-text">return</span> true
+                            }
+                          }
+                    </code>
+                </pre>
+            </section>
             <section class="expirience"></section>
             <section class="education"></section>
             <section class="english"></section>
