feat: update code example & skills section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <div class="header_nav">
                 <div class="nav">
-                    <nav >
+                    <nav>
                         <ul class="header-menu">
                             <li>
                                 <a href="#">About</a>
@@ -60,7 +60,7 @@
                 <div class="text-main">
                     <ul>
                         <li>
-                            <p>QA Skills</p>
+                            <p>QA Skills:</p>
                             <ul>
                                 <li>
                                     <p>Project Management and Issues Tracking Tools: JIRA (Atlassian), Confluence, MS Office, Trello, SharePoint</p>
@@ -71,22 +71,58 @@
                             </ul>
                         </li>
                         <li>
-                            <p>Technical Skills</p>
+                            <p>Technical Skills:</p>
+                            <ul>
+                                <li>
+                                    <p>Database: MySQL, MSSQL, ORACLE RDBMS, Postgres</p>
+                                </li>
+                                <li>
+                                    <p>Programming language: Python, RUST, Groovy</p>
+                                </li>
+                                <li>
+                                    <p>WebServers: apache2, nginx, IIS</p>
+                                </li>
+                                <li>
+                                    <p>DevOPS: k8's, docker, openshift, Gitlab Ci/CD</p>
+                                </li>
+                                <li>
+                                    <p>Cloud services: Azure, AWS, Google Cloud</p>
+                                </li>
+                            </ul>
                         </li>
                         <li>
-                            <p>Web Development</p>
+                            <p>Web Development:</p>
+                            <ul>
+                                <li>
+                                    <p>Database: MySQL, MSSQL, ORACLE RDBMS, Postgres</p>
+                                </li>
+                                <li>
+                                    <p>Programming language: Python, RUST, Groovy</p>
+                                </li>
+                                <li>
+                                    <p>WebServers: apache2, nginx, IIS</p>
+                                </li>
+                                <li>
+                                    <p>DevOPS: k8's, docker, openshift, Gitlab Ci/CD</p>
+                                </li>
+                                <li>
+                                    <p>Cloud services: Azure, AWS, Google Cloud</p>
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                 </div>
             </section>
             <section class="code">
+                <h2 class="text-divider">Code Example</h2>
+                <div class="line-divider"></div>
                 <pre>
                     <code>
-                        <span class="code-text">function</span> <span class="code-dif">solution</span> (<span style="color: #de935f;">str</span>, ending){
-                            <span class="code-text">if</span> (ending.length > 0){
-                                return</span> ending === str.substr(0-ending.length);
+                        <span class="code-text">function</span> <span class="code-dif">solution</span> (<span class="code-dif">str</span>, <span class="code-dif">ending</span>){
+                            <span class="code-text">if</span> (<span class="code-var">ending</span>.<span class="code-var">length</span> > <span class="code-dif">0</span>){
+                                <span class="code-text">return</span> <span class="code-var">ending</span> === <span class="code-var">str</span>.<span class="code-var">substr</span>(<span class="code-dif">0</span>-<span class="code-var">ending</span>.<span class="code-var">length</span>);
                             }<span class="code-text">else</span> {
-                                <span class="code-text">return</span> true
+                                <span class="code-text">return</span> <span class="code-bool">true</span>
                             }
                           }
                     </code>
