feat: add contacts section and new font color

--- a/index.html
+++ b/index.html
@@ -46,92 +46,119 @@
                 </div>
             </div>
         </header>
+
         <main class="container">
-            <section class="main">
-                    <h2 class="text-divider">About Me</h2>
-                    <div class="line-divider"></div>
-                    <div class="text-main">
-                        <p>I have more than 4 years of experience in Performance Quality Assurance. During this time I have had different projects in multiple industries such as E-commerce, CRM and CMS projects, online games, and banking systems. My working experience in performance testing helps provide recommendations on improving the performance of the application server-side. I have experience working in close collaboration with test automation, functional, development, and DevOps teams. I have strong technical skills and analytical abilities.</p>
-                    </div>
-            </section>
-            <section class="skills">
-                <h2 class="text-divider">Skills</h2>
+            <aside>
+                <h2 class="text-divider">Contacts</h2>
                 <div class="line-divider"></div>
-                <div class="text-main">
+                <div class="contactd">
                     <ul>
                         <li>
-                            <p>QA Skills:</p>
-                            <ul>
-                                <li>
-                                    <p>Project Management and Issues Tracking Tools: JIRA (Atlassian), Confluence, MS Office, Trello, SharePoint</p>
-                                </li>
-                                <li>
-                                    <p>Testing Tools and utilities: JMeter, HP Loadrunner, Visual Studio, Azure Monitoring, Fiddler, VirtualBox, VPN clients (Cisco, OpenVPN), Putty, Oracle Enterprise Manager Cloud Control 13c</p>
-                                </li>
-                            </ul>
+                            <a></a>
                         </li>
                         <li>
-                            <p>Technical Skills:</p>
-                            <ul>
-                                <li>
-                                    <p>Database: MySQL, MSSQL, ORACLE RDBMS, Postgres</p>
-                                </li>
-                                <li>
-                                    <p>Programming language: Python, RUST, Groovy</p>
-                                </li>
-                                <li>
-                                    <p>WebServers: apache2, nginx, IIS</p>
-                                </li>
-                                <li>
-                                    <p>DevOPS: k8's, docker, openshift, Gitlab Ci/CD</p>
-                                </li>
-                                <li>
-                                    <p>Cloud services: Azure, AWS, Google Cloud</p>
-                                </li>
-                            </ul>
+                            <a></a>
                         </li>
                         <li>
-                            <p>Web Development:</p>
-                            <ul>
-                                <li>
-                                    <p>Database: MySQL, MSSQL, ORACLE RDBMS, Postgres</p>
-                                </li>
-                                <li>
-                                    <p>Programming language: Python, RUST, Groovy</p>
-                                </li>
-                                <li>
-                                    <p>WebServers: apache2, nginx, IIS</p>
-                                </li>
-                                <li>
-                                    <p>DevOPS: k8's, docker, openshift, Gitlab Ci/CD</p>
-                                </li>
-                                <li>
-                                    <p>Cloud services: Azure, AWS, Google Cloud</p>
-                                </li>
-                            </ul>
+                            <a></a>
                         </li>
                     </ul>
                 </div>
-            </section>
-            <section class="code">
-                <h2 class="text-divider">Code Example</h2>
-                <div class="line-divider"></div>
-                <pre>
-                    <code>
-                        <span class="code-text">function</span> <span class="code-dif">solution</span> (<span class="code-dif">str</span>, <span class="code-dif">ending</span>){
-                            <span class="code-text">if</span> (<span class="code-var">ending</span>.<span class="code-var">length</span> > <span class="code-dif">0</span>){
-                                <span class="code-text">return</span> <span class="code-var">ending</span> === <span class="code-var">str</span>.<span class="code-var">substr</span>(<span class="code-dif">0</span>-<span class="code-var">ending</span>.<span class="code-var">length</span>);
-                            }<span class="code-text">else</span> {
-                                <span class="code-text">return</span> <span class="code-bool">true</span>
+            </aside>
+            <article>
+                <section class="main">
+                        <h2 class="text-divider">About Me</h2>
+                        <div class="line-divider"></div>
+                        <div class="text-main">
+                            <p>I have more than 4 years of experience in Performance Quality Assurance. During this time I have had different projects in multiple industries such as E-commerce, CRM and CMS projects, online games, and banking systems. My working experience in performance testing helps provide recommendations on improving the performance of the application server-side. I have experience working in close collaboration with test automation, functional, development, and DevOps teams. I have strong technical skills and analytical abilities.</p>
+                        </div>
+                </section>
+                <section class="skills">
+                    <h2 class="text-divider">Skills</h2>
+                    <div class="line-divider"></div>
+                    <div class="text-main">
+                        <ul>
+                            <li>
+                                <p>QA Skills:</p>
+                                <ul>
+                                    <li>
+                                        <p>Project Management and Issues Tracking Tools: JIRA (Atlassian), Confluence, MS Office, Trello, SharePoint</p>
+                                    </li>
+                                    <li>
+                                        <p>Testing Tools and utilities: JMeter, HP Loadrunner, Visual Studio, Azure Monitoring, Fiddler, VirtualBox, VPN clients (Cisco, OpenVPN), Putty, Oracle Enterprise Manager Cloud Control 13c</p>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <p>Technical Skills:</p>
+                                <ul>
+                                    <li>
+                                        <p>Database: MySQL, MSSQL, ORACLE RDBMS, Postgres</p>
+                                    </li>
+                                    <li>
+                                        <p>Programming language: Python, RUST, Groovy</p>
+                                    </li>
+                                    <li>
+                                        <p>WebServers: apache2, nginx, IIS</p>
+                                    </li>
+                                    <li>
+                                        <p>DevOPS: k8's, docker, openshift, Gitlab Ci/CD</p>
+                                    </li>
+                                    <li>
+                                        <p>Cloud services: Azure, AWS, Google Cloud</p>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <p>Web Development:</p>
+                                <ul>
+                                    <li>
+                                        <p>Initial knowledge of JS. I have been studying JS.</p>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </section>
+                <section class="code">
+                    <h2 class="text-divider">Code Example</h2>
+                    <div class="line-divider"></div>
+                    <pre>
+                        <code>
+                            <span class="code-text">function</span> <span class="code-dif">solution</span> (<span class="code-dif">str</span>, <span class="code-dif">ending</span>){
+                                <span class="code-text">if</span> (<span class="code-var">ending</span>.<span class="code-var">length</span> > <span class="code-dif">0</span>){
+                                    <span class="code-text">return</span> <span class="code-var">ending</span> === <span class="code-var">str</span>.<span class="code-var">substr</span>(<span class="code-dif">0</span>-<span class="code-var">ending</span>.<span class="code-var">length</span>);
+                                }<span class="code-text">else</span> {
+                                    <span class="code-text">return</span> <span class="code-bool">true</span>
+                                }
                             }
-                          }
-                    </code>
-                </pre>
-            </section>
-            <section class="expirience"></section>
-            <section class="education"></section>
-            <section class="english"></section>
-            <section class="contacts"></section>
+                        </code>
+                    </pre>
+                </section>
+                <section class="expirience"></section>
+                <section class="education">
+                    <h2 class="text-divider">Expirience</h2>
+                    <div class="line-divider"></div>
+                </section>
+                <section class="english">
+                    <h2 class="text-divider">English</h2>
+                    <div class="line-divider"></div>
+                    <div class="text-main"> 
+                        <ul>
+                            <li>
+                                <b>Speaking:</b> Pre-Intermediate
+                            </li>
+                            <li>
+                                <b>Reading:</b> Pre-Intermediate
+                            </li>
+                            <li>
+                                <b>Writing:</b> Pre-Intermediate
+                            </li>
+                        </ul>
+                    </div>
+                </section>
+                <section class="contacts"></section>
+            </article>
         </main>
     </body>
 </html>
