feat: add social icons

--- a/index.html
+++ b/index.html
@@ -51,16 +51,19 @@
             <aside>
                 <h2 class="text-divider">Contacts</h2>
                 <div class="line-divider"></div>
-                <div class="contactd">
+                <div class="text-main">
                     <ul>
                         <li>
-                            <a></a>
+                            <a href="mailto:a.hanevsky@gmail.com">a.hanevsky@gmail.com</a>
                         </li>
                         <li>
-                            <a></a>
+                            <a href="https://discord.gg/kfPjQBQ3">Discord server</a>
                         </li>
                         <li>
-                            <a></a>
+                            <a href="tg://resolve?domain=hanevsky">Send me a telegramm</a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/Hanevsky">My GitHub</a>
                         </li>
                     </ul>
                 </div>
