refactor: refactor code

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="description" content="Aleksandr Hanevsky CV">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./css/style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
     </head>
     <body>
         <header class="container">
@@ -18,25 +19,25 @@
                     <nav>
                         <ul class="header-menu">
                             <li>
-                                <a href="#">About</a>
+                                <a href="#abount">About</a>
                             </li>
                             <li>
-                                <a href="#">Skills</a>
+                                <a href="#skills">Skills</a>
                             </li>
                             <li>
-                                <a href="#">Code example</a>
+                                <a href="#code">Code example</a>
                             </li>
                             <li>
-                                <a href="#">Expirience</a>
+                                <a href="#expirience">Expirience</a>
                             </li>
                             <li>
-                                <a href="#">Education</a>
+                                <a href="#education">Education</a>
                             </li>
                             <li>
-                                <a href="#">English</a>
+                                <a href="#english">English</a>
                             </li>
                             <li>
-                                <a href="#">Contacts</a>
+                                <a href="#contacts">Contacts</a>
                             </li>
                         </ul>
                     </nav>
@@ -48,35 +49,35 @@
         </header>
 
         <main class="container">
-            <aside>
+            <aside id="contacts">
                 <h2 class="text-divider">Contacts</h2>
                 <div class="line-divider"></div>
-                <div class="text-main">
+                <div class="text-main contacts">
                     <ul>
                         <li>
-                            <a href="mailto:a.hanevsky@gmail.com">a.hanevsky@gmail.com</a>
+                            <a href="mailto:a.hanevsky@gmail.com" class="svg-insert ico-gmail">a.hanevsky@gmail.com</a>
                         </li>
                         <li>
-                            <a href="https://discord.gg/kfPjQBQ3">Discord server</a>
+                            <a href="https://discord.gg/kfPjQBQ3" class="svg-insert ico-discord">Discord server</a>
                         </li>
                         <li>
-                            <a href="tg://resolve?domain=hanevsky">Send me a telegramm</a>
+                            <a href="tg://resolve?domain=hanevsky" class="svg-insert ico-telega">Send me a telegramm</a>
                         </li>
                         <li>
-                            <a href="https://github.com/Hanevsky">My GitHub</a>
+                            <a href="https://github.com/Hanevsky" class="svg-insert ico-git">My GitHub</a>
                         </li>
                     </ul>
                 </div>
             </aside>
             <article>
-                <section class="main">
+                <section class="main" id="abount">
                         <h2 class="text-divider">About Me</h2>
                         <div class="line-divider"></div>
                         <div class="text-main">
                             <p>I have more than 4 years of experience in Performance Quality Assurance. During this time I have had different projects in multiple industries such as E-commerce, CRM and CMS projects, online games, and banking systems. My working experience in performance testing helps provide recommendations on improving the performance of the application server-side. I have experience working in close collaboration with test automation, functional, development, and DevOps teams. I have strong technical skills and analytical abilities.</p>
                         </div>
                 </section>
-                <section class="skills">
+                <section class="skills" id="skills">
                     <h2 class="text-divider">Skills</h2>
                     <div class="line-divider"></div>
                     <div class="text-main">
@@ -123,7 +124,7 @@
                         </ul>
                     </div>
                 </section>
-                <section class="code">
+                <section class="code" id="code">
                     <h2 class="text-divider">Code Example</h2>
                     <div class="line-divider"></div>
                     <pre>
@@ -138,29 +139,28 @@
                         </code>
                     </pre>
                 </section>
-                <section class="expirience"></section>
+                <section class="expirience" id="expirience"></section>
                 <section class="education">
                     <h2 class="text-divider">Expirience</h2>
                     <div class="line-divider"></div>
                 </section>
-                <section class="english">
+                <section class="english" id='english'>
                     <h2 class="text-divider">English</h2>
                     <div class="line-divider"></div>
                     <div class="text-main"> 
                         <ul>
                             <li>
-                                <b>Speaking:</b> Pre-Intermediate
+                                Speaking: Pre-Intermediate
                             </li>
                             <li>
-                                <b>Reading:</b> Pre-Intermediate
+                                Reading: Pre-Intermediate
                             </li>
                             <li>
-                                <b>Writing:</b> Pre-Intermediate
+                                Writing: Pre-Intermediate
                             </li>
                         </ul>
                     </div>
                 </section>
-                <section class="contacts"></section>
             </article>
         </main>
     </body>
