--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <header class="container">
             <div class="header_photo">
-                <img src="./photos/photo_portconf19_011.jpg" alt="Aleksandr photo">
+                <img src="./photos/IMG_5861.jpg" alt="Aleksandr photo">
             </div>
             <div class="header_nav">
                 <div class="nav">
@@ -70,51 +70,51 @@
                 </div>
             </aside>
             <article>
-                <section class="main" id="abount">
+                <section id="abount">
                         <h2 class="text-divider">About Me</h2>
                         <div class="line-divider"></div>
                         <div class="text-main">
                             <p>I have more than 4 years of experience in Performance Quality Assurance. During this time I have had different projects in multiple industries such as E-commerce, CRM and CMS projects, online games, and banking systems. My working experience in performance testing helps provide recommendations on improving the performance of the application server-side. I have experience working in close collaboration with test automation, functional, development, and DevOps teams. I have strong technical skills and analytical abilities.</p>
                         </div>
                 </section>
-                <section class="skills" id="skills">
+                <section id="skills">
                     <h2 class="text-divider">Skills</h2>
                     <div class="line-divider"></div>
                     <div class="text-main">
                         <ul>
                             <li>
-                                <p>QA Skills:</p>
+                                <p class="bold">QA Skills:</p>
                                 <ul>
                                     <li>
-                                        <p>Project Management and Issues Tracking Tools: JIRA (Atlassian), Confluence, MS Office, Trello, SharePoint</p>
+                                        <p><span class="bold">Management and Issues Tracking Tools:</span> JIRA (Atlassian), Confluence, MS Office, Trello, SharePoint</p>
                                     </li>
                                     <li>
-                                        <p>Testing Tools and utilities: JMeter, HP Loadrunner, Visual Studio, Azure Monitoring, Fiddler, VirtualBox, VPN clients (Cisco, OpenVPN), Putty, Oracle Enterprise Manager Cloud Control 13c</p>
+                                        <p><span class="bold">Testing Tools and utilities:</span> JMeter, HP Loadrunner, Visual Studio, Azure Monitoring, Fiddler, VirtualBox, VPN clients (Cisco, OpenVPN), Putty, Oracle Enterprise Manager Cloud Control 13c</p>
                                     </li>
                                 </ul>
                             </li>
                             <li>
-                                <p>Technical Skills:</p>
+                                <p class="bold">Technical Skills:</p>
                                 <ul>
                                     <li>
-                                        <p>Database: MySQL, MSSQL, ORACLE RDBMS, Postgres</p>
+                                        <p><span class="bold">Database:</span> MySQL, MSSQL, ORACLE RDBMS, Postgres</p>
                                     </li>
                                     <li>
-                                        <p>Programming language: Python, RUST, Groovy</p>
+                                        <p><span class="bold">Programming language:</span> Python, RUST, Groovy</p>
                                     </li>
                                     <li>
-                                        <p>WebServers: apache2, nginx, IIS</p>
+                                        <p><span class="bold">WebServers:</span> apache2, nginx, IIS</p>
                                     </li>
                                     <li>
-                                        <p>DevOPS: k8's, docker, openshift, Gitlab Ci/CD</p>
+                                        <p><span class="bold">DevOPS:</span> k8's, docker, openshift, Gitlab Ci/CD</p>
                                     </li>
                                     <li>
-                                        <p>Cloud services: Azure, AWS, Google Cloud</p>
+                                        <p><span class="bold">Cloud services:</span> Azure, AWS, Google Cloud</p>
                                     </li>
                                 </ul>
                             </li>
                             <li>
-                                <p>Web Development:</p>
+                                <p class="bold">Web Development:</p>
                                 <ul>
                                     <li>
                                         <p>Initial knowledge of JS. I have been studying JS.</p>
@@ -124,7 +124,7 @@
                         </ul>
                     </div>
                 </section>
-                <section class="code" id="code">
+                <section id="code">
                     <h2 class="text-divider">Code Example</h2>
                     <div class="line-divider"></div>
                     <pre>
@@ -139,10 +139,11 @@
                         </code>
                     </pre>
                 </section>
-                <section class="expirience" id="expirience"></section>
+                <section id="expirience"></section>
                 <section class="education">
                     <h2 class="text-divider">Expirience</h2>
                     <div class="line-divider"></div>
+                    <div class="expirience"></div>
                 </section>
                 <section class="english" id='english'>
                     <h2 class="text-divider">English</h2>
@@ -150,18 +151,27 @@
                     <div class="text-main"> 
                         <ul>
                             <li>
-                                Speaking: Pre-Intermediate
+                                <span class="bold">Speaking:</span> Pre-Intermediate
                             </li>
                             <li>
-                                Reading: Pre-Intermediate
+                                <span class="bold">Reading:</span> Pre-Intermediate
                             </li>
                             <li>
-                                Writing: Pre-Intermediate
+                                <span class="bold">Writing:</span> Pre-Intermediate
                             </li>
                         </ul>
                     </div>
                 </section>
             </article>
         </main>
+        <footer class="bold">
+            <div>
+                <img src="./icons/icons8-github-black.svg" alt="GitHub logo">
+                <a href="https://github.com/Hanevsky" class="bold">Hanevsky</a>
+            </div>
+            <div><p class="bold">&#169;2022</p></div>
+            <div><img src="./images/rs_school_js.svg" alt="RSSchool logo"></div>
+            <div><a href="https://rs.school/js/" class="bold">Курс «JavaScript/Front-end»</a></div> 
+        </footer>
     </body>
 </html>
