feat: add education section

--- a/index.html
+++ b/index.html
@@ -129,21 +129,42 @@
                     <div class="line-divider"></div>
                     <pre>
                         <code>
-                            <span class="code-text">function</span> <span class="code-dif">solution</span> (<span class="code-dif">str</span>, <span class="code-dif">ending</span>){
+                            <span class="code-text">function</span> <span class="code-dif">solution</span>(<span class="code-dif">str</span>, <span class="code-dif">ending</span>){
                                 <span class="code-text">if</span> (<span class="code-var">ending</span>.<span class="code-var">length</span> > <span class="code-dif">0</span>){
-                                    <span class="code-text">return</span> <span class="code-var">ending</span> === <span class="code-var">str</span>.<span class="code-var">substr</span>(<span class="code-dif">0</span>-<span class="code-var">ending</span>.<span class="code-var">length</span>);
-                                }<span class="code-text">else</span> {
+                                    <span class="code-text">return</span> <span class="code-var">ending</span> === <span class="code-var">str</span>.<span class="code-var">substr</span>(-<span class="code-var">ending</span>.<span class="code-var">length</span>);
+                                }<span class="code-text"> else</span> {
                                     <span class="code-text">return</span> <span class="code-bool">true</span>
                                 }
                             }
                         </code>
                     </pre>
                 </section>
-                <section id="expirience"></section>
-                <section class="education">
+                <section id="expirience">
                     <h2 class="text-divider">Expirience</h2>
                     <div class="line-divider"></div>
                     <div class="expirience"></div>
+                </section>
+                <section class="education">
+                    <h2 class="text-divider">Education</h2>
+                    <div class="line-divider"></div>
+                    <div class="text-main">
+                        <ul>
+                            <li>
+                                <p><span class="bold">Education Institution:</span> Belarusian State Technological University</p>
+                            </li>
+                            <li>
+                                <p><span class="bold">Speciality:</span> Forest industry</p>
+                            </li>
+                        </ul>
+                        <ul>
+                            <li>
+                                <p><span class="bold">Education course:</span> Softline</p>
+                            </li>
+                            <li>
+                                <p><span class="bold">Speciality:</span> Oracle Database 12c: Performance Management and Tuning</p>
+                            </li>
+                        </ul>
+                    </div>
                 </section>
                 <section class="english" id='english'>
                     <h2 class="text-divider">English</h2>
