refactor: update list margin

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <div class="line-divider"></div>
                     <div class="expirience"></div>
                 </section>
-                <section class="education">
+                <section id="education">
                     <h2 class="text-divider">Education</h2>
                     <div class="line-divider"></div>
                     <div class="text-main">
