--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
                 <img src="./photos/IMG_5861.jpg" alt="Aleksandr photo">
             </div>
             <div class="header_nav">
-                <div class="nav">
                     <nav>
                         <ul class="header-menu">
                             <li>
@@ -41,7 +40,6 @@
                             </li>
                         </ul>
                     </nav>
-                </div>
                 <div class="name">
                     <h1>Aleksandr Hanevsky</h1>
                 </div>
@@ -69,7 +67,7 @@
                     </ul>
                 </div>
             </aside>
-            <article>
+            <div class="main">
                 <section id="abount">
                         <h2 class="text-divider">About Me</h2>
                         <div class="line-divider"></div>
@@ -142,7 +140,16 @@
                 <section id="expirience">
                     <h2 class="text-divider">Expirience</h2>
                     <div class="line-divider"></div>
-                    <div class="expirience"></div>
+                    <div class="text-main article">
+                        <article>
+                            <a href="https://hanevsky.github.io/rsschool-cv/cv">
+                                <div class="article-body">
+                                    <img src="./images/markdown_CV.png" width="100%" height="100%" alt="Markdown CV image">
+                                </div>
+                                <div class="article-header bold">Markdown CV</div>
+                            </a>
+                        </article>
+                    </div>
                 </section>
                 <section id="education">
                     <h2 class="text-divider">Education</h2>
@@ -183,15 +190,15 @@
                         </ul>
                     </div>
                 </section>
-            </article>
+            </div>
         </main>
         <footer class="bold">
             <div>
-                <img src="./icons/icons8-github-black.svg" alt="GitHub logo">
+                <img src="./icons/icons8-github-black.svg" width="2em" alt="GitHub logo">
                 <a href="https://github.com/Hanevsky" class="bold">Hanevsky</a>
             </div>
             <div><p class="bold">&#169;2022</p></div>
-            <div><img src="./images/rs_school_js.svg" alt="RSSchool logo"></div>
+            <div><img src="./images/rs_school_js.svg" width="2em" alt="RSSchool logo"></div>
             <div><a href="https://rs.school/js/" class="bold">Курс «JavaScript/Front-end»</a></div> 
         </footer>
     </body>
