--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
                     <div class="text-main article">
                         <article>
                             <a href="https://hanevsky.github.io/rsschool-cv/cv">
+                                <div class="bold">Task: Markdown & Git</div>
                                 <div class="article-body">
                                     <img src="./images/markdown_CV.png" width="100%" height="100%" alt="Markdown CV image">
                                 </div>
-                                <div class="article-header bold">Markdown CV</div>
                             </a>
                         </article>
                     </div>
