refactor: images size

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             <a href="https://hanevsky.github.io/rsschool-cv/cv">
                                 <div class="bold">Task: Markdown & Git</div>
                                 <div class="article-body">
-                                    <img src="./images/markdown_CV.png" width="100%" height="100%" alt="Markdown CV image">
+                                    <img src="./images/markdown_CV.png" width="829px" height="405px" alt="Markdown CV image">
                                 </div>
                             </a>
                         </article>
@@ -194,11 +194,11 @@
         </main>
         <footer class="bold">
             <div>
-                <img src="./icons/icons8-github-black.svg" width="2em" alt="GitHub logo">
+                <img src="./icons/icons8-github-black.svg" width="30px" alt="GitHub logo">
                 <a href="https://github.com/Hanevsky" class="bold">Hanevsky</a>
             </div>
             <div><p class="bold">&#169;2022</p></div>
-            <div><img src="./images/rs_school_js.svg" width="2em" alt="RSSchool logo"></div>
+            <div><img src="./images/rs_school_js.svg" width="30px" alt="RSSchool logo"></div>
             <div><a href="https://rs.school/js/" class="bold">Курс «JavaScript/Front-end»</a></div> 
         </footer>
     </body>
