refactor: heading for article

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <div class="text-main article">
                         <article>
                             <a href="https://hanevsky.github.io/rsschool-cv/cv">
-                                <div class="bold">Task: Markdown & Git</div>
+                                <h3 class="bold">Task: Markdown & Git</h3>
                                 <div class="article-body">
                                     <img src="./images/markdown_CV.png" width="829" height="405" alt="Markdown CV image">
                                 </div>
