--- a/index.html
+++ b/index.html
@@ -145,7 +145,15 @@
                             <a href="https://hanevsky.github.io/rsschool-cv/cv">
                                 <h3 class="bold">Task: Markdown & Git</h3>
                                 <div class="article-body">
-                                    <img src="./images/markdown_CV.png" width="829" height="405" alt="Markdown CV image">
+                                    <img src="./images/markdown_CV.jpg" width="829" height="405" alt="Markdown CV image">
+                                </div>
+                            </a>
+                        </article>
+                        <article>
+                            <a href="https://www.codewars.com/users/Hanevsky/completed_solutions">
+                                <h3 class="bold">Task: Codewars</h3>
+                                <div class="article-body">
+                                    <img src="./images/codewars.jpg" width="829" height="405" alt="Markdown CV image">
                                 </div>
                             </a>
                         </article>
@@ -200,8 +208,11 @@
                 <a href="https://github.com/Hanevsky" class="bold">Hanevsky</a>
             </div>
             <div><p class="bold">&#169;2022</p></div>
-            <div><img src="./images/rs_school_js.svg" width="86" height="32" alt="RSSchool logo"></div>
-            <div><a href="https://rs.school/js/" class="bold">Курс «JavaScript/Front-end»</a></div> 
+            <div>
+                <a href="https://rs.school/js/" class="bold">
+                    <img src="./images/rs_school_js.svg" width="86" height="32" alt="«JavaScript/Front-end logo">
+                </a>
+            </div> 
         </footer>
     </body>
 </html>
