--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <header class="container">
             <div class="header_photo">
-                <img src="./photos/IMG_5861.jpg" alt="Aleksandr photo">
+                <img src="./photos/IMG_5861.jpg" width="320" width="320" alt="Aleksandr photo">
             </div>
             <div class="header_nav">
                     <nav>
@@ -145,15 +145,15 @@
                             <a href="https://hanevsky.github.io/rsschool-cv/cv">
                                 <h3 class="bold">Task: Markdown & Git</h3>
                                 <div class="article-body">
-                                    <img src="./images/markdown_CV.jpg" width="829" height="405" alt="Markdown CV image">
+                                    <img src="./images/markdown_CV.jpg" width="900" height="625" alt="Markdown CV image">
                                 </div>
                             </a>
                         </article>
                         <article>
-                            <a href="https://www.codewars.com/users/Hanevsky/completed_solutions">
+                            <a href="https://www.codewars.com/users/Hanevsky/">
                                 <h3 class="bold">Task: Codewars</h3>
                                 <div class="article-body">
-                                    <img src="./images/codewars.jpg" width="829" height="405" alt="Markdown CV image">
+                                    <img src="./images/codewars.jpg" width="900" height="625" alt="Codewars image">
                                 </div>
                             </a>
                         </article>
