refactor: fix heading for article

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <div class="text-main article">
                         <article>
                             <a href="https://hanevsky.github.io/rsschool-cv/cv">
-                                <h3 class="bold">Task: Markdown & Git</h3>
+                                <h4>Task: Markdown & Git</h4>
                                 <div class="article-body">
                                     <img src="./images/markdown_CV.jpg" width="900" height="625" alt="Markdown CV image">
                                 </div>
@@ -151,7 +151,7 @@
                         </article>
                         <article>
                             <a href="https://www.codewars.com/users/Hanevsky/">
-                                <h3 class="bold">Task: Codewars</h3>
+                                <h4>Task: Codewars</h4>
                                 <div class="article-body">
                                     <img src="./images/codewars.jpg" width="900" height="625" alt="Codewars image">
                                 </div>
