--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Aleksandr Hanevsky CV</title>
-        <meta name="description" content="Aleksandr Hanevsky CV">
+        <meta name="description" content="Aleksandr Hanevsky's CV">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./css/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
     <body>
         <header class="container">
             <div class="header_photo">
-                <img src="./photos/IMG_5861.jpg" width="320" width="320" alt="Aleksandr photo">
+                <img src="./photos/IMG_5861.jpg" width="320" width="320" alt="Aleksandrs photo">
             </div>
             <div class="header_nav">
                     <nav>
