--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="description" content="Aleksandr Hanevsky's CV">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./css/style.css">
+        <link rel="icon" href="./icons/favicon.ico" type="image/x-icon">
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
     </head>
     <body>
