refactor: fix height in logo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <header class="container">
             <div class="header_photo">
-                <img src="./photos/IMG_5861.jpg" width="320" width="320" alt="Aleksandrs photo">
+                <img src="./photos/IMG_5861.jpg" width="320" height="320" alt="Aleksandrs photo">
             </div>
             <div class="header_nav">
                     <nav>
